text wrap fix

--- a/github-user-search-app/style.css
+++ b/github-user-search-app/style.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    word-break: break-all;
 
     background-color: var(--color-2);
 }
